# echo-ecp-fullauto

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  OUTREACH.md  README.md  SECURITY.md  SHOW_HN.md  TIMESTAMP.md  VALIDATION.md  action.yml  echo_system_v3.py  echo_system_v4.py  pyproject.toml  requirements.txt
.echo/: config.yaml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: publish.yml  release-dispatch.yml  test.yml
docs/: ARCHITECTURE.md  ECOSYSTEM_CONNECTION.md  EVOLUTION.md  GUMROAD_ECHOFILE.md  PRIMITIVES.md  ROADMAP.md  WHITE_PAPER.md  migration_v1.0_to_v1.1-hardened.md  protocol_v1.1-hardened.md  reference_example_e2e.md
echo_ecp/: __init__.py  __main__.py  cli.py
examples/: advanced_usage.py  basic_usage.py
tests/: test_convergence.py  test_gate.py  test_partition.py  test_protocol_validator.py  test_v4.py
tools/: validate_protocol.py
